<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EagleChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_my_details">My details</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_add_contact">Add a contact</string>
    <string name="loading">Loading…</string>
    <string name="empty">You have no contacts. Click the \'add\u00A0contacts\' button in the action bar.</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="action_burn">BURN</string>
    <string name="abc_send_message_description">Send message</string>
    <string name="title_activity_my_details">My details</string>
    <string name="label_fingerprint">Fingerprint:</string>
    <string name="label_network_id">Network ID:</string>
    <string name="label_public_key">Public key:</string>
    <string name="shared_prefs_file">eaglechat.eaglechat.SharedPreferences</string>
    <string name="label_networkId">Network ID:</string>
    <string name="label_contactName">Name:</string>
    <string name="action_scan">Scan QR code</string>
    <string name="title_activity_register">Setup</string>
    <string name="action_settings">Settings</string>
    <string name="action_generateKeys">Generate keys</string>
    <string name="label_setupDescription">It\'s time to set up your EagleChat device</string>
    <string name="label_nameDescription">Enter a name for other EagleChat users to see:</string>
    <string name="hint_publicKey">00:11:22:33:44:55:66:77:88:99:aa:bb:cc:dd:ee:ff:00:11:22:33:44:55:66:77:88:99:aa:bb:cc:dd:ee:ff</string>
    <string name="hint_contactName">First Last</string>
    <string name="hint_networkId">01ab</string>
    <string name="title_activity_usb_test">UsbTestActivity</string>
    <string name="note_deviceConnected">EagleChat device connected</string>
    <string name="note_waitingForDevice">Please connect EagleChat device</string>
    <string name="status_checkingConfiguration">Checking configuration</string>
    <string name="label_passwordDescription">Password:</string>
    <string name="label_nodeIdDescription">Enter a number in hexadecimal format as your node ID.</string>
</resources>
