<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:fab="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:clickable="true"
              android:background="@color/background_material_light"
              tools:context="eaglechat.eaglechat.AddContactActivity">


    <TextView
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/label_contactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapWords"
        android:singleLine="true"
        android:hint="@string/hint_contactName"
        android:paddingLeft="0dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:textAppearance="?android:attr/textAppearance"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:text="@string/label_public_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="@string/hint_publicKey"
        android:id="@+id/text_publicKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789abcdef"
        android:inputType="text|textNoSuggestions"
        android:singleLine="true"
        android:paddingLeft="0dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:textAppearance="?android:attr/textAppearance"
        android:text="@string/label_networkId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"/>

    <EditText
        android:hint="@string/hint_networkId"
        android:textAllCaps="true"
        android:id="@+id/text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789ABCDEF"
        android:inputType="textCapCharacters|textNoSuggestions"
        android:imeOptions="actionDone"
        android:minEms="2"
        android:paddingLeft="0dp"
        android:maxLength="2"
        android:singleLine="true"/>

    <Button
        android:id="@+id/button_scan"
        android:text="@string/action_scan"
        android:elevation="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/button_submit"
            android:elevation="10dp"
            android:src="@drawable/ic_done_white_24dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_colorPressed="@color/colorPrimaryDark"/>

    </RelativeLayout>

</LinearLayout>
